Bug 100134 - ODT import progressbar: too many updates
Summary: ODT import progressbar: too many updates
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.3.0 target:5.2.0.1 target:5.1.4
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-30 07:24 UTC by Miklos Vajna
Modified: 2016-10-25 18:54 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2016-05-30 07:24:03 UTC
Profiling the ODT import of a large mostly text-only document, it turns out we spend ~3% of the time in updating the progressbar. So if there is a relatively simple fix to only update the progressbar once for every percent that would (hopefully) still make the UX acceptable, with the benefit of the import being slightly faster.
Comment 1 Commit Notification 2016-05-30 09:55:55 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=20ad9893d5d3be13d8aa17764e483afaa083b5c0

tdf#100134 xmloff: only update the progressbar twice for every percent

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2016-05-30 11:49:17 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2ece89b68513d89700e20962c531579d20676896&h=libreoffice-5-2

tdf#100134 xmloff: only update the progressbar twice for every percent

It will be available in 5.2.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2016-05-30 22:08:00 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0fac4acb32baf59558f46d42ce31751948f00da3&h=libreoffice-5-1

tdf#100134 xmloff: only update the progressbar twice for every percent

It will be available in 5.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.