tdf#100134 xmloff: only update the progressbar twice for every percent

This restores the state before commit
e1b78d36008d1fd188ca8dc154ad069d3476520c (#95181#; call the setValue
method of the XStatusIndicator as often as possible to enable
reschedule, 2001-11-26), which doesn't seem to be necessary anymore,
perhaps due to the current scheduler that has priorities.

Rather than a plain revert, still allow the progressbar to jump back, as
that seems to be used relatively frequently. So just filter out the
calls that would increment the value, but only with a small difference,
compared to the shown value.

(cherry picked from commit 20ad9893d5d3be13d8aa17764e483afaa083b5c0)

Change-Id: I7136b20f1c64e267b0b4a35bbe2564e5163d9468
Reviewed-on: https://gerrit.libreoffice.org/25666
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
Tested-by: Michael Meeks <michael.meeks@collabora.com>
(cherry picked from commit 0fac4acb32baf59558f46d42ce31751948f00da3)