include/xmloff/ProgressBarHelper.hxx
@@ -36,6 +36,7 @@ class XMLOFF_DLLPUBLIC ProgressBarHelper
             sal_Int32                                             nRange;
             sal_Int32                                             nReference;
             sal_Int32                                             nValue;
+            double                                                fOldPercent;
             bool                                                  bStrict;
             // #96469#; if the value goes over the Range the progressbar starts again
             bool                                                  bRepeat;
